# zeval-ai

./: .env.example  .gitignore  LICENSE  pyproject.toml
docs/: design_principles.md  metrics_field_mapping.md  understanding_answer_correctness.md  understanding_answer_relevancy.md  understanding_f1_score.md  what_is_zeval.md
examples/: test_answer_correctness.py  test_answer_relevancy.py  test_context_precision.py  test_context_recall.py  test_context_relevance.py  test_docling_reader.py  test_e2e_complete.py  test_faithfulness.py  test_file_md5.py  test_filter.py  test_filter_quick.py  test_filter_structure.py  test_generate_dataset.py  test_graph.py  test_markdown_splitter.py  test_multi_hop.py  test_persona.py  test_reporter.py  test_runner_all_metrics.py  test_single_hop.py  test_transform.py  test_transform_pipeline_operator.py  test_with_filter.py
examples/e2e/: complete_workflow_example.py  generate_dataset_example.py
examples/evaluation/: answer_correctness_example.py  answer_relevancy_example.py  context_precision_example.py  context_recall_example.py  context_relevance_example.py  faithfulness_example.py  runner_all_metrics_example.py
examples/graphs/: graph_example.py
examples/readers/: docling_example.py  markitdown_example.py  mineru_example.py
examples/synthetic_data/: filter_example.py  multi_hop_example.py  persona_example.py  single_hop_example.py  splitter_example.py  transform_example.py  transform_pipeline_example.py
examples/utils/: reporter_example.py
zeval/: __init__.py
zeval/evaluation/: __init__.py  reporter.py  runner.py
zeval/evaluation/metrics/: __init__.py  base.py
zeval/evaluation/runners/: __init__.py
zeval/schemas/: __init__.py  base.py  document.py  eval.py  markdown.py  metadata.py  pdf.py  types.py  unit.py
zeval/synthetic_data/: __init__.py
zeval/synthetic_data/filters/: __init__.py  base.py  general.py
zeval/synthetic_data/generators/: __init__.py  multi_hop.py  persona.py  single_hop.py
zeval/synthetic_data/graphs/: __init__.py  base.py  overlap.py
zeval/synthetic_data/readers/: __init__.py  (+4 more)
zeval/utils/: __init__.py  logger.py  source.py
(+26 files in other folders)
